# india-compliance

./: .flake8  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .mergify.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .releaserc  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  codecov.yml  commitlint.config.js  dev-requirements.txt  license.txt  package.json  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.yaml  feature_request.yaml
.github/helper/: documentation.py  install.sh  site_config.json
.github/workflows/: backport.yml  codeql.yml  docs-required.yml  initiate_release.yml  linters.yml  mirror-to-v15-beta.yml  on_release.yml  patch.yml  post_install.yml  post_install_patch.yml  semantic-commits.yml  server-tests.yml
india_compliance/: __init__.py  boot.py  exceptions.py  hooks.py  install.py  modules.txt  patches.txt  setup_wizard.py  test_patches.py  uninstall.py
india_compliance/apis/: auth_api.py  gstn_ewb_api.py  gstn_public_api.py  gstn_returns_api.py
india_compliance/asp_connectors/: auth_api.py  gstn_ewb_api.py  gstn_public_api.py  gstn_returns_api.py
india_compliance/audit_trail/: setup.py  utils.py
india_compliance/audit_trail/client_scripts/: accounts_settings.js  customize_form.js
india_compliance/audit_trail/constants/: custom_fields.py
india_compliance/audit_trail/overrides/: accounts_settings.py  customize_form.py  property_setter.py  test_account_settings.py  test_customize_form.py  test_property_setter.py  test_version.py  version.py
india_compliance/config/: desktop.py  docs.py
india_compliance/gst_india/: __init__.py  setup.py  test_records.py  testutils.py  uninstall.py
india_compliance/gst_india/api/: __init__.py
india_compliance/gst_india/api_classes/: __init__.py  base.py  e_invoice.py  e_waybill.py  public.py  returns.py  taxpayer_base.py  taxpayer_e_invoice.py  taxpayer_returns.py  utils.py
india_compliance/gst_india/asp_connectors/: base_api.py  e_invoice_api.py  e_waybill_api.py  public_api.py  returns_api.py  utils.py
india_compliance/gst_india/client_script/: customer.js  delivery_note.js  sales_invoice.js
india_compliance/gst_india/client_scripts/: accounts_settings.js  address.js  company.js  customer.js  delivery_note.js  document_naming_rule.js  document_naming_settings.js  e_invoice_actions.js  e_waybill_actions.js  e_waybill_applicability.js  e_waybill_utils.js  einvoice.js  einvoice_2.js  expense_claim.js  gstin_query.js  invoice.js  item.js  item_tax_template.js  journal_entry.js  party.js  payment_entry.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  quotation.js  sales_invoice.js  sales_invoice_list.js  sales_order.js  stock_entry.js  subcontracting_order.js  subcontracting_receipt.js  supplier.js  taxes.js  (+1 more)
india_compliance/income_tax_india/: setup.py  uninstall.py
india_compliance/monkey_patches/: desktop.py  page.py
india_compliance/patches/: add_company_link_to_einvoice_settings.py  check_version_compatibility.py  switch_to_develop.py
india_compliance/public/: node_modules
india_compliance/setup_wizard/: setup_wizard.py
india_compliance/templates/: gst_breakup.html
india_compliance/test_records/: test_address_records.json  test_customer_records.json
india_compliance/tests/: __init__.py  e_invoice_test_data.json  e_waybill_test_data.json  test_records.json  test_records.py  utils.py
(+625 files in other folders)
