[project]
name = "india_compliance"
authors = [
	{ name = "Resilient Tech", email = "hello@indiacompliance.app" }
]
description = "ERPNext app to simplify compliance with Indian Rules and Regulations"
readme = "README.md"
dynamic = ["version"]
dependencies = [
	"python-barcode~=0.13.1",
	"titlecase~=2.3",
	"pandas~=1.4.2",
	"thefuzz~=0.19.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
known_frappe = "frappe"
known_erpnext = "erpnext"
no_lines_before = ["ERPNEXT"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "FIRSTPARTY", "LOCALFOLDER"]
