[project]
name = "india_compliance"
authors = [
    { name = "Resilient Tech", email = "hello@indiacompliance.app" }
]
description = "ERPNext app to simplify compliance with Indian Rules and Regulations"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-barcode~=0.15.1",
    "titlecase~=2.3",
    "pycryptodome~=3.19.0",

    # Not used directly - required by PyQRCode for PNG generation
    "pypng~=0.20220715.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
known_frappe = "frappe"
known_erpnext = "erpnext"
no_lines_before = ["ERPNEXT"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "FIRSTPARTY", "LOCALFOLDER"]

[tool.bench.dev-dependencies]
parameterized = "~=0.8.1"
time-machine = "~=2.10.0"
