[project]
name = "india_compliance"
authors = [
    { name = "Resilient Tech", email = "hello@indiacompliance.app" }
]
description = "ERPNext app to simplify compliance with Indian Rules and Regulations"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "python-barcode~=0.15.1",
    "titlecase~=2.3",
    "pycryptodome~=3.19.0",

    # Not used directly - required by PyQRCode for PNG generation
    "pypng~=0.20220715.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
parameterized = "~=0.8.1"
time-machine = "~=2.10.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.isort.sections]
frappe = ["frappe"]
erpnext = ["erpnext"]

[tool.ruff.lint.isort]
no-lines-before = ["erpnext"]
section-order = ["future", "standard-library", "third-party", "frappe", "erpnext", "first-party", "local-folder"]


[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
    "B905", # `zip()` without an explicit `strict=` parameter
]
